<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Vrijeme na radaru</string>
    <string name="main_activity_title">Vrijeme na radaru</string>
    <string name="img_unavailable">Image currently unavailable.</string>
    <string name="widget_slo">1 SLO</string>
    <string name="widget_hr_kompozit">2 HR Kompozit</string>
    <string name="widget_hr_gradiste">3 HR Gradište</string>
    <string name="widget_hr_bilogora">4 HR Bilogora</string>
    <string name="widget_hr_puntijarka">5 HR Puntijarka</string>
    <string name="widget_hr_goli">6 HR Goli</string>
    <string name="widget_hr_debeljak">7 HR Debeljak</string>
    <string name="widget_hr_uljenje">8 HR Uljenje</string>
    <string name="help">Help and Tips</string>
    <string name="about">About</string>
    <string name="privacy_policy_menu_item">Privacy Policy</string>
    <string name="rateme_menu_item">Rate on Play Store</string>
    <string name="settings">Settings</string>
    <string name="refresh">Refresh</string>
    <string name="edit_radars">Add/Remove</string>
    <string name="animation_covers_minutes">Time covered by the animation*</string>
    <string name="note_on_vibration_setting">* Android setting \"Media vibration\" must be enabled for vibration to work</string>
    <string name="animation_rate">Animation Rate</string>
    <string name="freeze_time">Pause before repeating</string>
    <string name="seekbar_vibrate">Vibrate on seekbar edges</string>
    <string name="broken_image_description">Broken image</string>
    <string name="widget_log">Application Log</string>
    <string name="widget_log_enabled">Enabled</string>
    <string name="show_widget_log">Show</string>
    <string name="clear_widget_log">Clear</string>
    <string name="oops_dont_clear_widget_log">Oops</string>
    <string name="yes_clear_widget_log">Yes, Clear!</string>
    <string name="rateme_title">Rate Our App</string>
    <string name="rateme_question">
        If you enjoy using our app, please take a moment to rate it.
        Thanks for your support!
    </string>
    <string name="rateme_yes">Yes, let me do it</string>
    <string name="rateme_later">Remind me later</string>
    <string name="rateme_already_did">I already did it</string>
    <string name="rateme_no">No, thanks</string>
    <string name="location_notice_title_fg">Location Access</string>
    <string name="location_notice_title_bg">Location Access in the Background</string>
    <string name="location_notice_fg">
        To see your location on the map, give Vrijeme na Radaru access to your
        location.\n
        \n
        If you use the home screen widget, give Vrijeme na Radaru access to your
        location all the time. That way the widget can stay up to date even when
        the app is not in use.\n
        \n
        The location data stays on your device and the app uses it for no other
        purpose than to show the red location dot on the map.
    </string>
    <string name="location_notice_bg">
        We noticed you are using a Vrijeme na Radaru widget on your home screen.
        Consider giving Vrijeme na Radaru access to your location all the time so
        the widget can stay up to date even when the app is not in use.\n
        \n
        The location data stays on your device and the app uses it for no other
        purpose than to show the red location dot on the map.
    </string>
    <string name="location_notice_proceed">Proceed</string>
    <string name="location_notice_skip">Skip</string>
    <string name="about_text">
        Version %1$s
        \n© 2018-2023 Marko Topolnik
        \n\nRadar image ARSO © Agencija Republike Slovenije za okolje
        \n\nRadar image DHMZ © Državni hidrometeorološki zavod
        \n\nSatellite image ZAMG © Zentralanstalt für Meteorologie und Geodynamik
        \n\nApp icon by Emilija Kalajžić
    </string>
    <string name="help_text">
        Tap an image to focus on it. In this mode you can zoom the image, and
        there\'s a seek bar you can drag to control what\'s shown.
        \n
        \nPlace the app\'s widget on your home screen to have quick access to
        the current radar image.
        \n
        \nTap the widget image to start the app.
        \n
        \nThe app uses OCR to read the image\'s timestamp, translates it to your
        timezone, and shows it above the image. Sometimes the websites stop
        updating their images, in that case you\'ll see the image\'s age growing.
        Once the age reaches one hour, the text turns red to alert you that the
        image is no longer up-to-date.
    </string>
</resources>
