<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/refresh"
          android:title="@string/refresh"
          android:icon="@drawable/ic_refresh_white_24dp"
          android:showAsAction="ifRoom"
    />
    <item android:id="@+id/settings"
          android:title="@string/settings"
          android:icon="@drawable/ic_settings_white_24dp"
          android:showAsAction="ifRoom"
    />
    <item android:id="@+id/help"
          android:title="@string/help"
    />
    <item android:id="@+id/about"
          android:title="@string/about"
    />
    <item android:id="@+id/rate_me"
          android:title="@string/rateme_menu_item"
    />
    <!--<item android:id="@+id/clear_rateme"-->
          <!--android:title="Clear Rate Me Data"-->
    <!--/>-->
</menu>
